@@ -1,5 +1,6 @@
 /*
  *  Copyright (c) 2006           Ji YongGang <jungle@soforge-studio.com>
+ *  Copyright (c) 2009           Cjacker <jzhuang@redflag-linux.com>
  *
  *  ChmSee is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -24,19 +25,15 @@
 #include "ihtml.h"
 #include "marshal.h"
 #include "utils/utils.h"
-#include "gecko_utils.h"
 
 static void html_class_init(HtmlClass *);
 static void html_init(Html *);
 
-static void html_title_cb(GtkMozEmbed *, Html *);
-static void html_location_cb(GtkMozEmbed *, Html *);
-static gboolean html_open_uri_cb(GtkMozEmbed *, const gchar *, Html *);
-static gboolean html_mouse_click_cb(GtkMozEmbed *, gpointer, Html *);
-static gboolean html_link_message_cb(GtkMozEmbed *, Html *);
-static void html_child_add_cb(GtkMozEmbed *, GtkWidget *, Html *);
-static void html_child_remove_cb(GtkMozEmbed *, GtkWidget *, Html *);
-static void html_child_grab_focus_cb(GtkWidget *, Html *);
+static gboolean webkit_web_view_mouse_click_cb(WebKitWebView *, gpointer, Html *);
+
+static void webkit_web_view_hovering_over_link_cb (WebKitWebView*, const gchar*, const gchar*, Html*);
+static void webkit_web_view_load_committed_cb (WebKitWebView*, WebKitWebFrame*, Html*);
+static void webkit_web_view_title_changed_cb (WebKitWebView*, WebKitWebFrame*, const gchar*, Html*);
 
 /* Signals */
 enum {
@@ -140,89 +137,75 @@ html_class_init(HtmlClass *klass)
 static void
 html_init(Html *html)
 {
-        html->gecko = GTK_MOZ_EMBED(gtk_moz_embed_new());
-        gtk_drag_dest_unset(GTK_WIDGET(html->gecko));
+        html->webview = WEBKIT_WEB_VIEW(webkit_web_view_new());
+        html->scrolled = gtk_scrolled_window_new(0,0);
+        gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (html->scrolled),
+                                    GTK_POLICY_AUTOMATIC,
+                                    GTK_POLICY_AUTOMATIC);
+        GTK_WIDGET_SET_FLAGS (html->scrolled, GTK_CAN_FOCUS);
+        gtk_container_add(GTK_CONTAINER (html->scrolled), GTK_WIDGET(html->webview));
 
-        g_signal_connect(G_OBJECT (html->gecko),
-                         "title",
-                         G_CALLBACK (html_title_cb),
+        g_signal_connect(G_OBJECT (html->webview),
+                         "title-changed",
+                         G_CALLBACK (webkit_web_view_title_changed_cb),
                          html);
-        g_signal_connect(G_OBJECT (html->gecko),
-                         "location",
-                         G_CALLBACK (html_location_cb),
+        g_signal_connect(G_OBJECT (html->webview),
+                         "button-press-event",
+                         G_CALLBACK (webkit_web_view_mouse_click_cb),
                          html);
-        g_signal_connect(G_OBJECT (html->gecko),
-                         "open-uri",
-                         G_CALLBACK (html_open_uri_cb),
+        g_signal_connect(G_OBJECT (html->webview),
+                         "hovering-over-link",
+                         G_CALLBACK (webkit_web_view_hovering_over_link_cb),
                          html);
-        g_signal_connect(G_OBJECT (html->gecko),
-                         "dom_mouse_click",
-                         G_CALLBACK (html_mouse_click_cb),
+        g_signal_connect(G_OBJECT (html->webview),
+                         "load-committed",
+                         G_CALLBACK (webkit_web_view_load_committed_cb),
                          html);
-        g_signal_connect(G_OBJECT (html->gecko),
-                         "link_message",
-                         G_CALLBACK (html_link_message_cb),
-                         html);
-        g_signal_connect(G_OBJECT (html->gecko),
-                         "add",
-                         G_CALLBACK (html_child_add_cb),
-                         html);
-        g_signal_connect(G_OBJECT (html->gecko),
-                         "remove",
-                         G_CALLBACK (html_child_remove_cb),
-                         html);
+        gtk_drag_dest_unset(GTK_WIDGET(html->webview));
 }
 
 /* callbacks */
 
-static void
-html_title_cb(GtkMozEmbed *embed, Html *html)
+static void 
+webkit_web_view_title_changed_cb (WebKitWebView*  web_view,
+                                  WebKitWebFrame* web_frame,
+                                  const gchar*    title,
+                                  Html*     html)
 {
-        char *new_title;
-
-        new_title = gtk_moz_embed_get_title(embed);
-        g_signal_emit(html, signals[TITLE_CHANGED], 0, new_title);
-        g_free(new_title);
+	const gchar *uri;
+	uri = webkit_web_frame_get_uri(web_frame);
+	g_signal_emit(html, signals[TITLE_CHANGED], 0, g_strdup(title));
+	g_signal_emit(html, signals[LOCATION_CHANGED], 0,g_strdup(uri) );
 }
 
 static void
-html_location_cb(GtkMozEmbed *embed, Html *html)
+webkit_web_view_load_committed_cb (WebKitWebView*  web_view,
+                                 WebKitWebFrame* web_frame,
+                                 Html*     html)
 {
-        char *location;
-
-        location = gtk_moz_embed_get_location(embed);
-        g_signal_emit(html, signals[LOCATION_CHANGED], 0, location);
-        g_free(location);
-}
-
-static gboolean
-html_open_uri_cb(GtkMozEmbed *embed, const gchar *uri, Html *html)
-{
-        gboolean ret_val;
-
-        ret_val = TRUE;
-
-        g_signal_emit(html, signals[OPEN_URI], 0, uri, &ret_val);
-
-        /* Reset current url */
+		g_object_freeze_notify (G_OBJECT (html));
+		const gchar *uri =  webkit_web_frame_get_uri(web_frame);
+		g_return_if_fail (uri != NULL);
+        g_signal_emit(html, signals[OPEN_URI], 0, g_strdup(uri));
         if (current_url != NULL) {
                 g_free(current_url);
                 current_url = NULL;
-
                 g_signal_emit(html, signals[LINK_MESSAGE], 0, "");
         }
+		g_object_thaw_notify (G_OBJECT (html));
 
-        return ret_val;
 }
 
-static gboolean
-html_mouse_click_cb(GtkMozEmbed *widget, gpointer dom_event, Html *html)
-{
-        gint button;
-        gint mask;
+#define KEYS_MODIFIER_MASK (GDK_SHIFT_MASK | GDK_CONTROL_MASK \
+    | GDK_MOD1_MASK | GDK_META_MASK | GDK_SUPER_MASK | GDK_HYPER_MASK )
 
-        button = gecko_utils_get_mouse_event_button(dom_event);
-        mask = gecko_utils_get_mouse_event_modifiers(dom_event);
+static gboolean
+webkit_web_view_mouse_click_cb(WebKitWebView *widget, gpointer dom_event, Html *html)
+{
+		GdkEventButton* event = dom_event;
+
+        gint button=event->button;
+        gint mask = event->state & KEYS_MODIFIER_MASK;
 
         if (button == 2 || (button == 1 && mask & GDK_CONTROL_MASK)) {
                 if (current_url) {
@@ -238,53 +221,32 @@ html_mouse_click_cb(GtkMozEmbed *widget, gpointer dom_event, Html *html)
 
                 return TRUE;
         }
-
+		
         return FALSE;
 }
 
-static gboolean
-html_link_message_cb(GtkMozEmbed *widget, Html *html)
-{
-        g_free(current_url);
-
-        current_url = gtk_moz_embed_get_link_message(widget);
-        g_signal_emit(html, signals[LINK_MESSAGE], 0, current_url);
-
-        if (current_url[0] == '\0') {
-                g_free(current_url);
-                current_url = NULL;
-        }
-
-        return FALSE;
-}
 
 static void
-html_child_add_cb(GtkMozEmbed *embed, GtkWidget *child, Html *html)
+webkit_web_view_hovering_over_link_cb (WebKitWebView* web_view,
+                                       const gchar*   tooltip,
+                                       const gchar*   link_uri,
+                                       Html* html)
 {
-        g_signal_connect(G_OBJECT (child),
-                         "grab-focus",
-                         G_CALLBACK (html_child_grab_focus_cb),
-                         html);
+	g_free(current_url);
+	current_url = g_strdup(link_uri);
+
+	if(current_url==NULL)
+		return;
+	
+	g_signal_emit(html, signals[LINK_MESSAGE], 0, current_url);
+	if (current_url[0] == '\0') {
+		g_free(current_url);
+		current_url = NULL;
+	}
+	return ;
+
 }
 
-static void
-html_child_remove_cb(GtkMozEmbed *embed, GtkWidget *child, Html *html)
-{
-        g_signal_handlers_disconnect_by_func(child, html_child_grab_focus_cb, html);
-}
-
-static void
-html_child_grab_focus_cb(GtkWidget *widget, Html *html)
-{
-        GdkEvent *event;
-
-        event = gtk_get_current_event();
-
-        if (event == NULL)
-                g_signal_stop_emission_by_name(widget, "grab-focus");
-        else
-                gdk_event_free(event);
-}
 
 /* external functions */
 
@@ -304,8 +266,7 @@ html_clear(Html *html)
         static const char *data = "<html><body bgcolor=\"white\"></body></html>";
 
         g_return_if_fail(IS_HTML (html));
-
-        gtk_moz_embed_render_data(html->gecko, data, strlen(data), "file:///", "text/html");
+		webkit_web_view_load_html_string(html->webview,data,"file:///");
 }
 
 void
@@ -323,7 +284,7 @@ html_open_uri(Html *self, const gchar *str_uri)
 
 	if(g_strcmp0(full_uri, html_get_location(self)) != 0) {
 		g_debug("Open uri %s", full_uri);
-		gtk_moz_embed_load_url(self->gecko, full_uri);
+		webkit_web_view_open (self->webview, full_uri);
 	}
 	g_free(full_uri);
 }
@@ -333,71 +294,89 @@ html_get_widget(Html *html)
 {
         g_return_val_if_fail(IS_HTML (html), NULL);
 
-        return GTK_WIDGET (html->gecko);
+        return GTK_WIDGET (html->scrolled);
 }
 
 gboolean
 html_can_go_forward(Html *html)
 {
         g_return_val_if_fail(IS_HTML (html), FALSE);
-
-        return gtk_moz_embed_can_go_forward(html->gecko);
+        return webkit_web_view_can_go_forward(html->webview);
 }
 
 gboolean
 html_can_go_back(Html *html)
 {
         g_return_val_if_fail(IS_HTML (html), FALSE);
-
-        return gtk_moz_embed_can_go_back(html->gecko);
+        return webkit_web_view_can_go_back(html->webview);
 }
 
 void
 html_go_forward(Html *html)
 {
         g_return_if_fail(IS_HTML (html));
-
-        gtk_moz_embed_go_forward(html->gecko);
+        webkit_web_view_go_forward(html->webview);
 }
 
 void
 html_go_back(Html *html)
 {
         g_return_if_fail(IS_HTML (html));
-
-        gtk_moz_embed_go_back(html->gecko);
+        webkit_web_view_go_back(html->webview);
 }
 
 gchar *
 html_get_title(Html *html)
 {
         g_return_val_if_fail(IS_HTML (html), NULL);
+        WebKitWebFrame *web_frame;
+        web_frame = webkit_web_view_get_main_frame (html->webview);
+        gchar *web_view_title=NULL;
+		if(web_frame)
+        	web_view_title = g_strdup(webkit_web_frame_get_title (web_frame));
 
-        return gtk_moz_embed_get_title(html->gecko);
+        return web_view_title; 
 }
 
 gchar *
 html_get_location(Html *html)
 {
         g_return_val_if_fail(IS_HTML (html), NULL);
-
-        return gtk_moz_embed_get_location(html->gecko);
+ 		WebKitWebFrame *web_frame;
+        web_frame = webkit_web_view_get_main_frame (html->webview);
+		gchar *uri = g_strdup(webkit_web_frame_get_uri(web_frame));
+		return uri;
 }
 
 void
 html_copy_selection(Html *html)
 {
-        g_return_if_fail(IS_HTML (html));
-
-        gecko_utils_copy_selection(html->gecko);
+	g_return_if_fail(IS_HTML (html));
+	GtkWidget *widget = GTK_WIDGET(html->webview);
+	if (G_LIKELY (widget) && g_signal_lookup ("copy-clipboard", G_OBJECT_TYPE (widget)))
+		g_signal_emit_by_name (widget, "copy-clipboard");
 }
 
 void
 html_select_all(Html *html)
 {
-        g_return_if_fail(IS_HTML (html));
+	g_return_if_fail(IS_HTML (html));
+	GtkWidget *widget = GTK_WIDGET(html->webview);
+	if (GTK_IS_EDITABLE (widget))
+		gtk_editable_select_region (GTK_EDITABLE (widget), 0, -1);
+	else if (g_signal_lookup ("select-all", G_OBJECT_TYPE (widget)))
+	{
+		if (GTK_IS_TEXT_VIEW (widget))
+			g_signal_emit_by_name (widget, "select-all", TRUE);
+		else if (GTK_IS_TREE_VIEW (widget))
+		{
+			gboolean dummy;
+			g_signal_emit_by_name (widget, "select-all", &dummy);
+		}
+		else
+			g_signal_emit_by_name (widget, "select-all");
+	}
 
-        gecko_utils_select_all(html->gecko);
 }
 
 void
@@ -407,18 +386,16 @@ html_increase_size(Html *html)
 
         g_return_if_fail(IS_HTML (html));
 
-        zoom = gecko_utils_get_zoom(html->gecko);
+        zoom = webkit_web_view_get_zoom_level(html->webview);
         zoom *= 1.2;
-
-        gecko_utils_set_zoom(html->gecko, zoom);
+		webkit_web_view_set_zoom_level(html->webview,zoom);	
 }
 
 void
 html_reset_size(Html *html)
 {
         g_return_if_fail(IS_HTML (html));
-
-        gecko_utils_set_zoom(html->gecko, 1.0);
+		webkit_web_view_set_zoom_level(html->webview,1.0);
 }
 
 void
@@ -428,50 +405,107 @@ html_decrease_size(Html *html)
 
         g_return_if_fail(IS_HTML (html));
 
-        zoom = gecko_utils_get_zoom(html->gecko);
+        zoom = webkit_web_view_get_zoom_level(html->webview);
         zoom /= 1.2;
-
-        gecko_utils_set_zoom(html->gecko, zoom);
+		webkit_web_view_set_zoom_level(html->webview,zoom);	
 }
 
 void html_shutdown(Html* html) {
-  gecko_utils_shutdown();
+  //Need it?
 }
 
 void html_init_system(void) {
-  gecko_utils_init();
+  //Need it?
 }
 
-void html_set_default_lang(gint lang) {
-  gecko_utils_set_default_lang(lang);
+static const gchar *encoding_list[] = {
+        "UTF-8",
+        "GBK",
+        "Big5",
+        "EUC-JP",
+        "EUC-KR",
+        "KOI8-R",
+        "ISO-8859-5"
+};
+
+void html_set_default_lang(gint lang_index) {
+    /*WebKitWebSettings *settings;
+    settings = webkit_web_view_get_settings (WEBKIT_WEB_VIEW (html->webview));
+    g_object_set (settings,
+            "default-encoding", encoding_list[lang_index],
+            NULL);*/
+}
+
+
+static gboolean
+split_font_string(const gchar *font_name, gchar **name, gint *size)
+{
+    PangoFontDescription *desc;
+    PangoFontMask         mask;
+    gboolean              retval = FALSE;
+
+    if (font_name == NULL) {
+        return FALSE;
+    }
+
+    mask = (PangoFontMask) (PANGO_FONT_MASK_FAMILY | PANGO_FONT_MASK_SIZE);
+
+    desc = pango_font_description_from_string(font_name);    if (!desc) {
+        return FALSE;
+    }
+
+    if ((pango_font_description_get_set_fields(desc) & mask) == mask) {
+        *size = PANGO_PIXELS(pango_font_description_get_size (desc));
+        *name = g_strdup(pango_font_description_get_family (desc));
+        retval = TRUE;
+    }
+
+    pango_font_description_free(desc);
+
+    return retval;
 }
 
 void html_set_variable_font(Html* html, const gchar* font) {
-  gecko_utils_set_font(GECKO_PREF_FONT_VARIABLE, font);
+    gint size;
+    gchar *name;
+    split_font_string(font,&name,&size);
+    WebKitWebSettings *settings;
+    settings = webkit_web_view_get_settings (WEBKIT_WEB_VIEW (html->webview));
+    g_object_set (settings,
+            "default-font-family", name,
+            "default-font-size", (guint) size,
+            NULL);
 }
 
 void html_set_fixed_font(Html* html, const gchar* font) {
-  gecko_utils_set_font(GECKO_PREF_FONT_FIXED, font);
+    gint size;
+    gchar *name;
+    split_font_string(font,&name,&size);
+    WebKitWebSettings *settings;
+    settings = webkit_web_view_get_settings (WEBKIT_WEB_VIEW (html->webview));
+    g_object_set (settings,
+            "monospace-font-family", name,
+            "default-monospace-font-size", (guint) size,
+            NULL);
 }
 
 
 void chmsee_ihtml_interface_init (ChmseeIhtmlInterface *iface) {
-  iface->get_title = html_get_title;
-  iface->get_location = html_get_location;
   iface->can_go_back = html_can_go_back;
   iface->can_go_forward = html_can_go_forward;
-
   iface->open_uri = html_open_uri;
-  iface->copy_selection = html_copy_selection;
-  iface->select_all = html_select_all;
   iface->go_back = html_go_back;
   iface->go_forward = html_go_forward;
+  iface->get_widget = html_get_widget;
+  iface->get_title = html_get_title;
+  iface->get_location = html_get_location;
   iface->increase_size = html_increase_size;
   iface->decrease_size = html_decrease_size;
   iface->reset_size = html_reset_size;
+  iface->copy_selection = html_copy_selection;
+  iface->select_all = html_select_all;
   iface->set_variable_font = html_set_variable_font;
   iface->set_fixed_font = html_set_fixed_font;
   iface->clear = html_clear;
   iface->shutdown = html_shutdown;
-  iface->get_widget = html_get_widget;
 }
